# blinky

./: .gitignore  BUILDING.md  README.md  build.sh
.github/workflows/: builds-on-windows.yml
engine/: .gitignore  Makefile  changelog.txt  meson.build  readme.txt
engine/NQ/: cl_input.c  cl_main.c  cl_parse.c  fisheye.c  host.c  host.h  host_cmd.c  net_dgrm.c  sbar.c  sv_user.c  view.c
engine/NQ/fisheye/: fishLua.c  fishScript.h  fishcam.c  fishcam.h  fishcmd.c  fishcmd.h  fisheye.c  fisheye.c.md  fishlens.c  fishlens.h  fishmem.c  fishmem.h  fishzoom.c  fishzoom.h  imageutil.c  imageutil.h
engine/NQ/tests/: fish_dependentTests.c  fish_dependentTests.sh  fish_depenedntTests.sh  fish_mathTests.c  fish_mockScript.c  fish_swrTest.sh  fishtests.c  fishtests.h  quake_swrTest.c
engine/QW/client/: cl_parse.c  cl_pred.c  sbar.c  skin.c
engine/QW/server/: sv_init.c  sv_user.c
engine/common/: cd_common.c  common.c  console.c  cvar.c  d_sprite.c  d_surf.c  gl_draw.c  gl_extensions.c  gl_mesh.c  gl_rmain.c  in_null.c  in_sdl.c  keys.c  menu.c  model.c  pr_edict.c  r_alias.c  r_bsp.c  r_edge.c  r_main.c  r_misc.c  r_model.c  r_part.c  rb_tree.c  screen.c  sdl_common.c  shell.c  snd_sdl.c  sys_null.c  sys_unix.c  sys_win.c  vid_mode.c  vid_null.c  vid_sdl.c  vid_wgl.c
engine/include/: common.h  cvar.h  fisheye.h  keys.h  menu.h  model.h  r_shared.h  rb_tree.h  render.h  sdl_common.h  shell.h  sound.h  tyrquake_icon_128.h  vid.h
engine/subprojects/: libtiff.wrap  sdl2_image.wrap
engine/test/: sys_t_unix.c
game/: blinky
game/id1/: config.cfg
game/lua-scripts/globes/: tetra.lua
